# starforge

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
benchmarks/: benchmark_update.cpp
demos/: demo_burst.c  demo_rain.c  demo_raylib_fire.c  demo_raylib_rain.c
include/: starforge_backend.h  starforge_backend_aos.h  starforge_backend_soa.h  starforge_backend_soa_avx2.h  starforge_backend_soa_cpu.h  starforge_emitter.h  starforge_emitter_burst.h  starforge_emitter_fire.h  starforge_emitter_rain.h  starforge_engine.h  starforge_frontend.h  starforge_frontend_ascii.h  starforge_frontend_raylib.h  starforge_math.h  starforge_particle.h  starforge_particle_pool.h  starforge_particle_pool_accessor.h  starforge_particle_pool_aos.h  starforge_particle_pool_soa.h  starforge_particle_type.h  starforge_particlesystem.h  starforge_world.h
src/: ascii_demo.c  main.c  starforge_backend_aos.c  starforge_backend_soa.c  starforge_backend_soa_avx2.c  starforge_backend_soa_cpu.c  starforge_emitter_burst.c  starforge_emitter_fire.c  starforge_emitter_rain.c  starforge_engine.c  starforge_frontend_ascii.c  starforge_frontend_raylib.c  starforge_particle_pool_aos.c  starforge_particle_pool_common.c  starforge_particle_pool_soa.c  starforge_particlesystem.c  starforge_world.c
tests/: test_engine.c  test_main.c
